<resources>
    <string name="app_name">OrgFinal</string>
    <string name="title">Organisation</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Organisation</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="food">Food</string>
    <string name="c">Clothes</string>
    <string name="b">Books</string>
    <string name="a">Amenities</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
